--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Articles</h1>
 
-<p>Our blog has <%= Article.public_count %> articles.</p>
+<p>Our blog has <%= Article.public_count %> article(s).</p>
 
 <ul>
     <% @articles.each do |article| %>
