Added link back from new.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,7 +12,7 @@
                     }%></li>
 </ul>
 
-<h2><%= Comment.public_count %> comment(s)</h2>
+<h2>Comment(s)</h2>
 <%= render @article.comments %>
 
 <h2>Add a comment:</h2>
