--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "Back to all articles", articles_path %>
 
 <h1><%= @article.title %></h1>
+<i>Status post: <%= @article.status %></i>
 
 <p><%= @article.body %></p>
 
