--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,15 @@
+
+
 <h1>Articles</h1>
 
 <p>Our blog has <%= Article.public_count %> article(s).</p>
 
-<ul>
+<div class="posts">
     <% @articles.each do |article| %>
         <% unless article.archived? %>
-            <li><%= link_to article.title, article %></li>
+            <div class="post">
+                <h2><%= link_to article.title, article %></h2>
+            </div>
         <% end %>
     <% end %>
-</ul>
-
-<%= link_to "New Article", new_article_path %>
+</div>
