--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="block">
+    <div class="nav">
+      <%= link_to "See all articles", articles_path, class: "nav-item" %>
+      <%= link_to "Create new post", new_article_path, class: "nav-item" %>
+    </div>
     <%= yield %>
   </body>
 </html>
